@@ -1,14 +1,22 @@
 package com.uam.uam_compartido_spring.Model;
 
 import jakarta.persistence.*;
+import lombok.Getter;
+import lombok.Setter;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
+
 /**
  * @author diego
  */
 @Entity(name = "usuarios")
-public class Usuario {
+@Getter
+@Setter
+public class Usuario implements UserDetails {
 
     @Id
     @Column(name = "noeconomico")
@@ -23,10 +31,6 @@ public class Usuario {
     @ManyToOne(cascade = CascadeType.ALL)
     @JoinColumn(name = "idrol")
     private Rol Rol;
-
-    public Usuario() {
-        this.Rol = new Rol();
-    }
 
     @Column(name = "nombre")
     private String Nombre;
@@ -49,113 +53,17 @@ public class Usuario {
     @JoinColumn(name = "iddivision")
     private Division division;
 
-    public Rol getRol() {
-        return Rol;
+    public Usuario() {
+        this.Rol = new Rol();
     }
 
-    public void setRol(Rol rol) {
-        Rol = rol;
-    }
-
-    public String getUsername() {
-        return email;
-    }
-
-    public void setEmail(String email) {
-        this.email = email;
-    }
-
-/*    @Override
-    public String getPassword() {
-        return password;
-    }*/
-
-    public void setPassword(String password) {
-        this.password = password;
-    }
-
-    public String getNoEconomico() {
-        return noEconomico;
-    }
-
-    public void setNoEconomico(String noEconomico) {
-        this.noEconomico = noEconomico;
-    }
-
-    public String getEmail() {
-        return email;
-    }
-
-    public String getNombre() {
-        return Nombre;
-    }
-
-    public void setNombre(String nombre) {
-        this.Nombre = nombre;
-    }
-
-    public String getApellidoPaterno() {
-        return ApellidoPaterno;
-    }
-
-    public void setApellidoPaterno(String apellidoPaterno) {
-        ApellidoPaterno = apellidoPaterno;
-    }
-
-    public String getApellidoMaterno() {
-        return ApellidoMaterno;
-    }
-
-    public void setApellidoMaterno(String apellidoMaterno) {
-        ApellidoMaterno = apellidoMaterno;
-    }
-
-    public Unidad getUnidad() {
-        return Unidad;
-    }
-
-    public void setUnidad(Unidad unidad) {
-        Unidad = unidad;
-    }
-
-    public Departamento getDepartamento() {
-        return departamento;
-    }
-
-    public void setDepartamento(Departamento departamento) {
-        this.departamento = departamento;
-    }
-
-    public Division getDivision() {
-        return division;
-    }
-
-    public void setDivision(Division division) {
-        this.division = division;
-    }
-
-/*    @Override
+    @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority(Rol.getNombre()));
+        return List.of(new SimpleGrantedAuthority(Rol.getNombre()));
     }
 
     @Override
-    public boolean isAccountNonExpired() {
-        return UserDetails.super.isAccountNonExpired();
+    public String getUsername() {
+        return this.email;
     }
-
-    @Override
-    public boolean isAccountNonLocked() {
-        return UserDetails.super.isAccountNonLocked();
-    }
-
-    @Override
-    public boolean isCredentialsNonExpired() {
-        return UserDetails.super.isCredentialsNonExpired();
-    }
-
-    @Override
-    public boolean isEnabled() {
-        return UserDetails.super.isEnabled();
-    }*/
 }
